[package]
name = "fn_has_this"
version = "0.1.0"
edition = "2018"
authors = ["William Venner <william@venner.io>"]
license = "MIT"
repository = "https://github.com/WilliamVenner/fn_has_this"
description = "A proc attribute macro that allows you to specify whether a function has a `this` argument (for conditional compilation)"
categories = ["development-tools"]
keywords = ["function", "macro"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"
syn_squash = "0"